--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -730,6 +730,8 @@
     <!-- Location -->
     <string name="preferences_location_title">Location</string>
     <string name="preferences_location_defaults_title">Location</string>
+    <string name="pref_coordinate_format_title">Coordinate Format</string>
+
     <string name="pref_geonav_category_title">GeoNav</string>
     <string name="pref_geonav_enable_title">Enable GeoNav</string>
     <string name="pref_geonav_enable_summary">Enables usage of device location to navigate fields.</string>
