--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -613,8 +613,7 @@
 
     <!-- Appearance -->
     <string name="preferences_appearance_title">Appearance</string>
-    <string name="preferences_appearance_system_category_title">Application</string>
-    <string name="preferences_appearance_features_category_title">Features</string>
+    <string name="preferences_appearance_application_title">Application</string>
 
     <string name="preferences_appearance_theme_title">Theme</string>
     <string name="preferences_appearance_theme_summary">Modify specific colors or the entire theme of Field Book</string>
@@ -657,43 +656,38 @@
     <string name="language_vi_vRN" translatable="false">Tiếng Việt</string>
     <string name="language_zh_rCN" translatable="false">简体字</string>
 
-    <string name="preferences_appearance_tutorial_description">Adds a tutorial icon to the collect, settings, fields, and traits screens</string>
+    <string name="preferences_appearance_collect_toolbar_title">Collect Toolbar</string>
 
-    <string name="preferences_general_feature_next_missing">Move To No Data</string>
-    <string name="preferences_general_feature_next_missing_description">Adds a button to the toolbar that jumps to the next entry with no data, depending on settings.</string>
+    <string name="preferences_appearance_tutorial_description">Add a toolbar button throughout the app that opens the tutorial</string>
 
-    <string name="preferences_general_skip_entries_disabled">Disabled</string>
-    <string name="preferences_general_skip_entries_with_data">Skip entries with data</string>
-    <string name="preferences_general_skip_entries_with_data_description">Skips entries that have data for the current trait</string>
-    <string name="preferences_general_skip_entries_across_all_traits">Skip entries across all traits</string>
-    <string name="preferences_general_skip_entries_across_all_traits_description">Skip entries that have data for all traits</string>
-    <string name="preferences_general_skip_entries_default">Default</string>
-    <string name="preferences_general_skip_entries_default_description">Go to next entry</string>
-
-    <string name="preferences_general_feature_barcode_text">Move To Unique ID</string>
-    <string name="preferences_general_feature_barcode_text_description">Adds a button to the toolbar to move to a specific entry by its unique id. Input method depends on settings.</string>
-    <string name="move_to_unique_id_disabled">Disabled</string>
-    <string name="move_to_unique_id_text_or_scan">Text Entry with Camera Scan Optional</string>
-    <string name="move_to_unique_id_text_or_scan_description">Toolbar button opens a dialog with a text input for a unique id and an optional Scan button</string>
-    <string name="move_to_unique_id_direct_camera_scan">Direct Camera Scan</string>
-    <string name="move_to_unique_id_direct_camera_scan_description">Toolbar button directly opens the device camera to scan a unique id barcode</string>
-
-    <string name="preferences_general_feature_datagrid">Datagrid</string>
-    <string name="preferences_general_feature_datagrid_description">Displays a spreadsheet of plots and traits showing collected data</string>
-
-    <string name="preferences_appearance_collection_category_title">Collect</string>
-    <string name="preferences_appearance_toolbar_customize">Customize Toolbar Icons</string>
-    <string name="preferences_appearance_toolbar_customize_description">Modify default icons on the collect screen</string>
+    <string name="preferences_appearance_toolbar_customize">Default Buttons</string>
+    <string name="preferences_appearance_toolbar_customize_description">Toggle the visibility of default buttons</string>
     <string name="preferences_appearance_toolbar_customize_search">Search</string>
     <string name="preferences_appearance_toolbar_customize_resources">Resources</string>
     <string name="preferences_appearance_toolbar_customize_summary">Summary</string>
     <string name="preferences_appearance_toolbar_customize_lock">Lock</string>
 
+    <string name="preferences_general_feature_datagrid">Datagrid</string>
+    <string name="preferences_general_feature_datagrid_description">Add a button to display a grid of collected data</string>
+
+    <string name="preferences_general_feature_next_missing">Next Entry With No Data</string>
+    <string name="preferences_general_feature_next_missing_description">Button set to: %s</string>
+    <string name="preferences_general_skip_entries_disabled">Disabled</string>
+    <string name="preferences_general_skip_entries_with_data">Skip entries that have data for the current trait</string>
+    <string name="preferences_general_skip_entries_across_all_traits">Skip entries that have data for all traits</string>
+
+    <string name="preferences_general_feature_barcode_text">Move To Unique ID</string>
+    <string name="preferences_general_feature_barcode_text_description">Button set to: %s</string>
+    <string name="move_to_unique_id_disabled">Disabled</string>
+    <string name="move_to_unique_id_text_or_scan">Text entry with optional camera scan</string>
+    <string name="move_to_unique_id_direct_camera_scan">Direct camera scan</string>
+    <string name="preferences_appearance_collect_screen_title">Collect Screen</string>
+
     <string name="preferences_appearance_infobar_number">Number Of InfoBars</string>
     <string name="preferences_appearance_infobar_number_description">Adjust the number of Infobars displayed on the main screen</string>
 
     <string name="preferences_appearance_quickgoto">Quick GoTo</string>
-    <string name="preferences_appearance_quickgoto_description">Changes middle section of main screen to the legacy Quick GoTo</string>
+    <string name="preferences_appearance_quickgoto_description">Change the middle section of main screen to the legacy Quick GoTo</string>
 
     <!-- Behavior -->
     <string name="preferences_behavior_title">Behavior</string>
@@ -709,16 +703,16 @@
     <string name="preferences_behavior_return_to_first_trait">Auto-Reset Traits</string>
     <string name="preferences_behavior_return_to_first_trait_description">Advancing the entry automatically resets to the first trait</string>
 
-    <string name="preferences_behavior_disable_entry_arrow">Require Data Before Advancement</string>
-    <string name="preferences_behavior_disable_entry_arrow_neither">Neither</string>
-    <string name="preferences_behavior_disable_entry_arrow_left">Left</string>
-    <string name="preferences_behavior_disable_entry_arrow_right">Right</string>
-    <string name="preferences_behavior_disable_entry_arrow_both">Both</string>
+    <string name="preferences_behavior_disable_entry_arrow">Require Data To Move Entry</string>
+    <string name="preferences_behavior_disable_entry_arrow_neither">Disabled</string>
+    <string name="preferences_behavior_disable_entry_arrow_left">Require data to move left</string>
+    <string name="preferences_behavior_disable_entry_arrow_right">Require data to move right</string>
+    <string name="preferences_behavior_disable_entry_arrow_both">Require data to move either direction</string>
 
     <string name="preferences_behavior_skip_entries_title">Skip Entries</string>
 
     <string name="preferences_general_swap_navigation">Swap Navigation</string>
-    <string name="preferences_general_swap_navigation_description">Swaps the behavior of the entry and trait arrows</string>
+    <string name="preferences_general_swap_navigation_description">Swap the behavior of the entry and trait arrows</string>
 
     <string name="preferences_behavior_volume_buttons_advance">Advance With Volume Keys</string>
     <string name="preferences_behavior_volume_buttons_advance_disabled">Disabled</string>
@@ -726,8 +720,8 @@
     <string name="preferences_behavior_volume_buttons_advance_entries">Volume keys advance entries</string>
 
     <string name="preferences_behavior_return_character">Carriage Return Action</string>
-    <string name="preferences_behavior_return_character_next_plot">Next plot</string>
-    <string name="preferences_behavior_return_character_next_trait">Next trait</string>
+    <string name="preferences_behavior_return_character_next_plot">Advance plot</string>
+    <string name="preferences_behavior_return_character_next_trait">Advance trait</string>
     <string name="preferences_behavior_return_character_do_nothing">Do nothing</string>
 
     <string name="preferences_general_use_day_number">Use Day Of Year</string>
