--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,7 +164,7 @@
     <string name="activity_field_editor_no_location_yet">No location found yet.</string>
     <string name="activity_field_editor_switch_field_same">Closest field already selected.</string>
 
-    <!-- Field details -->
+    <!-- Field Details -->
     <string name="field_detail_title">Field Detail</string>
     <string name="field_edit_display_name">Edit Field Display Name</string>
     <string name="name_cannot_be_empty">Name cannot be empty.</string>
@@ -182,13 +182,11 @@
     <string name="field_trait_total">"&lt;b>%1$s&lt;/b>" traits</string>
     <string name="field_observation_total">"&lt;b>%1$s&lt;/b>" observations</string>
     <string name="field_trait_observation_total">"%d" observations</string>
+
+    <!-- Field Detail Charts -->
     <string name="field_trait_chart_no_data">No data to chart</string>
     <string name="field_trait_chart_incompatible_format">This trait format cannot be charted</string>
     <string name="field_trait_chart_excess_data">Too many distinct values to chart</string>
-
-
-
-
 
     <!-- Semantic dates -->
     <string name="today">Today</string>
