--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -524,8 +524,10 @@
     <string name="observation_info_rep">Rep</string>
     <string name="observation_info_other">Other</string>
 
-
-
+    <!-- Skip Entries -->
+    <string name="collect_sole_entry_without_data">This is the only entry without data</string>
+    <string name="collect_all_entries_complete_for_current_trait">All entries have data for the current trait</string>
+    <string name="collect_all_entries_complete_for_all_traits">All entries have data for all traits</string>
 
     <!-- EXPORT -->
     <!-- Export dialog -->
