--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,12 @@
     <string name="app_intro_tutorial_summary">This setting can be changed in the Settings</string>
     <string name="app_intro_tutorial_positive">Yes</string>
     <string name="app_intro_tutorial_negative">No</string>
+    <string name="app_intro_required_setup_title">Set up Field Book</string>
+    <string name="app_intro_required_setup_summary">These settings are required for Field Book to function</string>
+    <string name="app_intro_permissions_title">Permissions</string>
+    <string name="app_intro_permissions_warning">Permissions not granted</string>
+    <string name="app_intro_storage_title">Define Storage</string>
+    <string name="app_intro_storage_warning">Please set the storage location</string>
 
 
     <!-- Permissions  -->
